# Arduino-Source

./: .clang-format  .gitattributes  .gitignore  Cleanup.cmd  LICENSE  PokemonLZA_DonutFarmer.h  README.md
SerialPrograms/: Build-Qt5.12.md  Build-Qt6.3.2.md  Build-Qt6.3.md  Build-Qt6.4.md  Build-Qt6.5.2.md  Build-Qt6.5.3.md  Build-Qt6.7.3.md  Build-Qt6.8.0.md  Build-Qt6.8.1.md  Build-Qt6.8.2.md  CMakeLists.txt  CMakePresets.json  Cleanup.cmd  README.md  SerialPrograms.pro  Sleepy.lib  SourceFiles.cmake  libtesseractc.lib
SerialPrograms/BuildInstructions/: Build-Ubuntu-Qt6.8.2.md  Build-Windows-Qt5.12.md  Build-Windows-Qt6.10.0.md  Build-Windows-Qt6.3.2.md  Build-Windows-Qt6.4.md  Build-Windows-Qt6.5.2.md  Build-Windows-Qt6.5.3.md  Build-Windows-Qt6.7.3.md  Build-Windows-Qt6.8.0.md  Build-Windows-Qt6.8.1.md  Build-Windows-Qt6.8.2.md  Build-Windows-Qt6.8.3.md  Build-Windows-Qt6.9.0.md  CompilingForMac.md
SerialPrograms/Scripts/: add_hash_property_to_model.py  add_new_file.py  build_code_from_template.py  check_detector_regions.py  check_pokemon_collection.py  fix_onnx_model_metadata.py  function_replace.py  image_region_check.py  image_viewer.py  invert_json.py  make_ocr_json.py  print_onnx_model_metadata.py  process_icon.py  prune_json.py  resize_image.py  test_websocket.py  use_new_wiki.py
SerialPrograms/Scripts/Linux/: PKGBUILD  packages.sh
SerialPrograms/Scripts/PokemonLZA/: optical_flow.py  phase_correlation_match.py  process_arrow_template_color.py  sift_circle_match.py  template_match.py
SerialPrograms/Scripts/TextProcessing/: convert_display_name_list_to_json.py  convert_pokemon_txt_to_json.py
SerialPrograms/Source/: PanelList.cpp  PanelList.h  PanelLists.cpp  PanelLists.h  StaticRegistration.h  StaticRegistrationQt.cpp
SerialPrograms/Source/CommandLine/: CommandLineExecutable.cmake  CommandLine_Main.cpp
SerialPrograms/Source/CommonFramework/: CrashDump.cpp  CrashDump.h  GlobalServices.cpp  GlobalServices.h  GlobalSettingsPanel.cpp  GlobalSettingsPanel.h  Globals.cpp  Globals.h  Language.cpp  Language.h  Main.cpp  NewVersionCheck.cpp  NewVersionCheck.h  PersistentSettings.cpp  PersistentSettings.h  ProgramSession.cpp  ProgramSession.h  ResourceDownloadTable.cpp  ResourceDownloadTable.h  SetupSettings.cpp  SetupSettings.h
SerialPrograms/Source/CommonTools/: DetectedBoxes.cpp  DetectedBoxes.h  DetectionDebouncer.h  FailureWatchdog.h  GlobalInferenceRunner.cpp  GlobalInferenceRunner.h  InferenceThrottler.h  MultiConsoleErrors.cpp  MultiConsoleErrors.h  Random.cpp  Random.h  VisualDetector.h
SerialPrograms/Source/ComputerPrograms/: ComputerProgram.cpp  ComputerProgram.h  UnitTestRunner.cpp  UnitTestRunner.h
SerialPrograms/Source/ControllerInput/: ControllerInput.cpp  ControllerInput.h
SerialPrograms/Source/Controllers/: Controller.cpp  Controller.h  ControllerCapabilities.h  ControllerCapability.cpp  ControllerCapability.h  ControllerConnection.cpp  ControllerConnection.h  ControllerDescriptor.cpp  ControllerDescriptor.h  ControllerSelectorWidget.cpp  ControllerSelectorWidget.h  ControllerSession.cpp  ControllerSession.h  ControllerState.cpp  ControllerState.h  ControllerStateTable.cpp  ControllerStateTable.h  ControllerStatusThread.h  ControllerTypeStrings.cpp  ControllerTypeStrings.h  ControllerTypes.h  Controllers.cpp  Controllers.h  HID_Keyboard.cpp  HID_Keyboard.h  Joystick.cpp  Joystick.h  JoystickTools.h  NullController.cpp  NullController.h  RumbleListener.h  SerialPortPollerQt.cpp  SerialPortPollerQt.h  SuperscalarScheduler.cpp  SuperscalarScheduler.h
SerialPrograms/Source/Integrations/: DiscordIntegrationSettings.cpp  DiscordIntegrationSettings.h  DiscordIntegrationSettingsWidget.cpp  DiscordIntegrationSettingsWidget.h  DiscordIntegrationTable.cpp  DiscordIntegrationTable.h  DiscordSettingsOption.cpp  DiscordSettingsOption.h  DiscordWebHook.cpp  DiscordWebHook.h  DiscordWebhook.cpp  DiscordWebhook.h  DiscordWebhookSettings.cpp  DiscordWebhookSettings.h  IntegrationsAPI.cpp  IntegrationsAPI.h  ProgramTracker.cpp  ProgramTracker.h  ProgramTrackerInterfaces.h  PybindSwitchController.cpp  PybindSwitchController.h  SleepyDiscordRunner.cpp  SleepyDiscordRunner.h
SerialPrograms/Source/Kernels/: Kernels_Alignment.h  Kernels_Arch (disabled).h  Kernels_Arch.h  Kernels_BitScan.h  Kernels_BitSet.h  Kernels_TrailingZeros.h  Kernels_arm64_NEON.h  Kernels_x64_AVX2.h  Kernels_x64_AVX512.h  Kernels_x64_SSE41.h
SerialPrograms/Source/ML/: ML_Panels.cpp  ML_Panels.h
SerialPrograms/Source/NintendoSwitch/: FixedInterval.h  FrameworkSettingsPanel.cpp  FrameworkSettingsPanel.h  NintendoSwitch_ConsoleHandle.cpp  NintendoSwitch_ConsoleHandle.h  NintendoSwitch_ConsoleState.cpp  NintendoSwitch_ConsoleState.h  NintendoSwitch_FixedInterval.h  NintendoSwitch_KeyboardMapping.cpp  NintendoSwitch_KeyboardMapping.h  NintendoSwitch_MultiSwitchProgram.cpp  NintendoSwitch_MultiSwitchProgram.h  NintendoSwitch_Panels.cpp  NintendoSwitch_Panels.h  NintendoSwitch_Settings.cpp  NintendoSwitch_Settings.h  NintendoSwitch_SingleSwitchProgram.cpp  NintendoSwitch_SingleSwitchProgram.h  Panels_NintendoSwitch.cpp  Panels_NintendoSwitch.h  TestPathMaker.cpp  TestPathMaker.h  TestProgram.cpp  TestProgram.h  TestProgramComputer.cpp  TestProgramComputer.h  TestProgramSwitch.cpp  TestProgramSwitch.h  TestProgramSwitchAudio.cpp  TestProgramSwitchAudio.h
SerialPrograms/Source/Pokemon/: Pokemon_AdvRng.cpp  Pokemon_AdvRng.h  Pokemon_BoxCursor.cpp  Pokemon_BoxCursor.h  Pokemon_CollectedPokemonInfo.cpp  Pokemon_CollectedPokemonInfo.h  Pokemon_DataTypes.h  Pokemon_EncounterStats.cpp  Pokemon_EncounterStats.h  Pokemon_IVChecker.cpp  Pokemon_IVChecker.h  Pokemon_IvJudge.cpp  Pokemon_IvJudge.h  Pokemon_NameReader.cpp  Pokemon_NameReader.h  Pokemon_NatureChecker.cpp  Pokemon_NatureChecker.h  Pokemon_Notification.cpp  Pokemon_Notification.h  Pokemon_OriginMarks.cpp  Pokemon_OriginMarks.h  Pokemon_ShinySparkleSet.cpp  Pokemon_ShinySparkleSet.h  Pokemon_SpeciesDatabase.cpp  Pokemon_SpeciesDatabase.h  (+11 more)
SerialPrograms/cmake/: CPack.cmake  MacOSXBundleInfo.plist.in  MacOSXEntitlements.plist  SourceFiles.cmake
(+5017 files in other folders)
