#set the minimum cmake version required
cmake_minimum_required(VERSION 3.16.0)

#set the name of the project
project(SerialPrograms)

#enable c++14 or c++ 20 depending on compiler
if (MSVC)
    set(CMAKE_CXX_STANDARD 20)
else()
    set(CMAKE_CXX_STANDARD 14)
endif()
set(CMAKE_CXX_STANDARD_REQUIRED ON)

#produce clang tidy file
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

#find Qt
find_package(Qt5 COMPONENTS Widgets SerialPort Multimedia MultimediaWidgets REQUIRED)

#add current directory to find tesseractPA.lib
link_directories(${CMAKE_CURRENT_LIST_DIR})

file(GLOB MAIN_SOURCES
    ../ClientSource/Connection/BotBase.h
    ../ClientSource/Connection/PABotBase.cpp
    ../ClientSource/Connection/PABotBase.h
    ../ClientSource/Connection/PABotBaseConnection.cpp
    ../ClientSource/Connection/PABotBaseConnection.h
    ../ClientSource/Connection/SerialConnection.h
    ../ClientSource/Connection/SerialConnectionPOSIX.h
    ../ClientSource/Connection/SerialConnectionWinAPI.h
    ../ClientSource/Connection/StreamInterface.h
    ../ClientSource/Libraries/Logging.cpp
    ../ClientSource/Libraries/Logging.h
    ../ClientSource/Libraries/MessageConverter.cpp
    ../ClientSource/Libraries/MessageConverter.h
    ../Common/CRC32.cpp
    ../Common/CRC32.h
    ../Common/Compiler.h
    ../Common/Cpp/AsyncDispatcher.cpp
    ../Common/Cpp/AsyncDispatcher.h
    ../Common/Cpp/Exception.cpp
    ../Common/Cpp/Exception.h
    ../Common/Cpp/FixedLimitVector.h
    ../Common/Cpp/PanicDump.cpp
    ../Common/Cpp/PanicDump.h
    ../Common/Cpp/ParallelTaskRunner.cpp
    ../Common/Cpp/ParallelTaskRunner.h
    ../Common/Cpp/PrettyPrint.cpp
    ../Common/Cpp/PrettyPrint.h
    ../Common/Cpp/SIMDDebuggers.h
    ../Common/Cpp/SpinLock.h
    ../Common/Cpp/Unicode.cpp
    ../Common/Cpp/Unicode.h
    ../Common/MessageProtocol.h
    ../Common/PokemonSwSh/PokemonProgramIDs.h
    ../Common/PokemonSwSh/PokemonSettings.cpp
    ../Common/PokemonSwSh/PokemonSettings.h
    ../Common/PokemonSwSh/PokemonSwShAutoHosts.cpp
    ../Common/PokemonSwSh/PokemonSwShAutoHosts.h
    ../Common/PokemonSwSh/PokemonSwShDateSpam.cpp
    ../Common/PokemonSwSh/PokemonSwShDateSpam.h
    ../Common/PokemonSwSh/PokemonSwShDaySkippers.cpp
    ../Common/PokemonSwSh/PokemonSwShDaySkippers.h
    ../Common/PokemonSwSh/PokemonSwShEggRoutines.cpp
    ../Common/PokemonSwSh/PokemonSwShEggRoutines.h
    ../Common/PokemonSwSh/PokemonSwShGameEntry.cpp
    ../Common/PokemonSwSh/PokemonSwShGameEntry.h
    ../Common/PokemonSwSh/PokemonSwShMisc.cpp
    ../Common/PokemonSwSh/PokemonSwShMisc.h
    ../Common/Qt/CodeValidator.cpp
    ../Common/Qt/CodeValidator.h
    ../Common/Qt/ExpressionEvaluator.cpp
    ../Common/Qt/ExpressionEvaluator.h
    ../Common/Qt/NoWheelComboBox.h
    ../Common/Qt/Options/BooleanCheckBoxOptionBase.cpp
    ../Common/Qt/Options/BooleanCheckBoxOptionBase.h
    ../Common/Qt/Options/FloatingPointOptionBase.cpp
    ../Common/Qt/Options/FloatingPointOptionBase.h
    ../Common/Qt/Options/FossilTableOptionBase.cpp
    ../Common/Qt/Options/FossilTableOptionBase.h
    ../Common/Qt/Options/MultiHostTableOptionBase.cpp
    ../Common/Qt/Options/MultiHostTableOptionBase.h
    ../Common/Qt/Options/SimpleIntegerOptionBase.cpp
    ../Common/Qt/Options/SimpleIntegerOptionBase.h
    ../Common/Qt/Options/StringOptionBase.cpp
    ../Common/Qt/Options/StringOptionBase.h
    ../Common/Qt/Options/SwitchDateOptionBase.cpp
    ../Common/Qt/Options/SwitchDateOptionBase.h
    ../Common/Qt/Options/TimeExpressionOptionBase.cpp
    ../Common/Qt/Options/TimeExpressionOptionBase.h
    ../Common/Qt/QtJsonTools.cpp
    ../Common/Qt/QtJsonTools.h
    ../Common/SwitchFramework/FrameworkSettings.cpp
    ../Common/SwitchFramework/FrameworkSettings.h
    ../Common/SwitchFramework/SwitchControllerDefs.h
    ../Common/SwitchFramework/Switch_PushButtons.cpp
    ../Common/SwitchFramework/Switch_PushButtons.h
    ../Common/SwitchFramework/Switch_PushButtons.h
    ../Common/SwitchRoutines/SwitchDigitEntry.cpp
    ../Common/SwitchRoutines/SwitchDigitEntry.h
    Source/CommonFramework/CrashDump.cpp
    Source/CommonFramework/CrashDump.h
    Source/CommonFramework/GlobalSettingsPanel.cpp
    Source/CommonFramework/GlobalSettingsPanel.h
    Source/CommonFramework/Globals.cpp
    Source/CommonFramework/Globals.h
    Source/CommonFramework/ImageMatch/CroppedImageMatcher.cpp
    Source/CommonFramework/ImageMatch/CroppedImageMatcher.h
    Source/CommonFramework/ImageMatch/ExactImageMatcher.cpp
    Source/CommonFramework/ImageMatch/ExactImageMatcher.h
    Source/CommonFramework/ImageMatch/FilterToAlpha.cpp
    Source/CommonFramework/ImageMatch/FilterToAlpha.h
    Source/CommonFramework/ImageMatch/ImageCropper.cpp
    Source/CommonFramework/ImageMatch/ImageCropper.h
    Source/CommonFramework/ImageMatch/ImageDiff.cpp
    Source/CommonFramework/ImageMatch/ImageDiff.h
    Source/CommonFramework/ImageMatch/ImageMatchOption.cpp
    Source/CommonFramework/ImageMatch/ImageMatchOption.h
    Source/CommonFramework/ImageMatch/ImageMatchMetadata.cpp
    Source/CommonFramework/ImageMatch/ImageMatchMetadata.h
    Source/CommonFramework/ImageMatch/ImageMatchResult.cpp
    Source/CommonFramework/ImageMatch/ImageMatchResult.h
    Source/CommonFramework/ImageTools/CellMatrix.cpp
    Source/CommonFramework/ImageTools/CellMatrix.h
    Source/CommonFramework/ImageTools/ColorClustering.cpp
    Source/CommonFramework/ImageTools/ColorClustering.h
    Source/CommonFramework/ImageTools/CommonFilters.cpp
    Source/CommonFramework/ImageTools/CommonFilters.h
    Source/CommonFramework/ImageTools/FillGeometry.cpp
    Source/CommonFramework/ImageTools/FillGeometry.h
    Source/CommonFramework/ImageTools/FloatPixel.cpp
    Source/CommonFramework/ImageTools/FloatPixel.h
    Source/CommonFramework/ImageTools/ImageBoxes.cpp
    Source/CommonFramework/ImageTools/ImageBoxes.h
    Source/CommonFramework/ImageTools/ImageStats.cpp
    Source/CommonFramework/ImageTools/ImageStats.h
    Source/CommonFramework/ImageTools/SolidColorTest.cpp
    Source/CommonFramework/ImageTools/SolidColorTest.h
    Source/CommonFramework/Inference/AnomalyDetector.cpp
    Source/CommonFramework/Inference/AnomalyDetector.h
    Source/CommonFramework/Inference/BlackScreenDetector.cpp
    Source/CommonFramework/Inference/BlackScreenDetector.h
    Source/CommonFramework/Inference/ImageTools.cpp
    Source/CommonFramework/Inference/ImageTools.h
    Source/CommonFramework/Inference/InferenceThrottler.h
    Source/CommonFramework/Inference/StatAccumulator.h
    Source/CommonFramework/Inference/TimeWindowStatTracker.h
    Source/CommonFramework/Inference/VisualInferenceCallback.cpp
    Source/CommonFramework/Inference/VisualInferenceCallback.h
    Source/CommonFramework/Inference/VisualInferenceRoutines.cpp
    Source/CommonFramework/Inference/VisualInferenceRoutines.h
    Source/CommonFramework/Inference/VisualInferenceSession.cpp
    Source/CommonFramework/Inference/VisualInferenceSession.h
    Source/CommonFramework/Language.cpp
    Source/CommonFramework/Language.h
    Source/CommonFramework/Main.cpp
    Source/CommonFramework/OCR/DictionaryMatcher.cpp
    Source/CommonFramework/OCR/DictionaryMatcher.h
    Source/CommonFramework/OCR/DictionaryOCR.cpp
    Source/CommonFramework/OCR/DictionaryOCR.h
    Source/CommonFramework/OCR/Filtering.cpp
    Source/CommonFramework/OCR/Filtering.h
    Source/CommonFramework/OCR/LanguageOptionOCR.cpp
    Source/CommonFramework/OCR/LanguageOptionOCR.h
    Source/CommonFramework/OCR/LargeDictionaryMatcher.cpp
    Source/CommonFramework/OCR/LargeDictionaryMatcher.h
    Source/CommonFramework/OCR/RawOCR.cpp
    Source/CommonFramework/OCR/RawOCR.h
    Source/CommonFramework/OCR/SmallDictionaryMatcher.cpp
    Source/CommonFramework/OCR/SmallDictionaryMatcher.h
    Source/CommonFramework/OCR/StringNormalization.cpp
    Source/CommonFramework/OCR/StringNormalization.h
    Source/CommonFramework/OCR/TesseractPA.h
    Source/CommonFramework/OCR/TextMatcher.cpp
    Source/CommonFramework/OCR/TextMatcher.h
    Source/CommonFramework/OCR/TrainingTools.cpp
    Source/CommonFramework/OCR/TrainingTools.h
    Source/CommonFramework/Options/BatchOption.cpp
    Source/CommonFramework/Options/BatchOption.h
    Source/CommonFramework/Options/BooleanCheckBoxOption.h
    Source/CommonFramework/Options/ConfigOption.h
    Source/CommonFramework/Options/DiscordSettingsOption.cpp
    Source/CommonFramework/Options/DiscordSettingsOption.h
    Source/CommonFramework/Options/EnumDropdownOption.cpp
    Source/CommonFramework/Options/EnumDropdownOption.h
    Source/CommonFramework/Options/FixedCodeOption.cpp
    Source/CommonFramework/Options/FixedCodeOption.h
    Source/CommonFramework/Options/FloatingPointOption.h
    Source/CommonFramework/Options/RandomCodeOption.cpp
    Source/CommonFramework/Options/RandomCodeOption.h
    Source/CommonFramework/Options/ScreenshotFormatOption.cpp
    Source/CommonFramework/Options/ScreenshotFormatOption.h
    Source/CommonFramework/Options/SectionDivider.cpp
    Source/CommonFramework/Options/SectionDivider.h
    Source/CommonFramework/Options/SimpleIntegerOption.h
    Source/CommonFramework/Options/StringBoxOption.cpp
    Source/CommonFramework/Options/StringBoxOption.h
    Source/CommonFramework/Options/StringOption.h
    Source/CommonFramework/Options/StringSelectOption.cpp
    Source/CommonFramework/Options/StringSelectOption.h
    Source/CommonFramework/Options/TextEditOption.cpp
    Source/CommonFramework/Options/TextEditOption.h
    Source/CommonFramework/Panels/Panel.cpp
    Source/CommonFramework/Panels/Panel.h
    Source/CommonFramework/Panels/PanelList.cpp
    Source/CommonFramework/Panels/PanelList.h
    Source/CommonFramework/Panels/RunnableComputerProgram.cpp
    Source/CommonFramework/Panels/RunnableComputerProgram.h
    Source/CommonFramework/Panels/RunnablePanel.cpp
    Source/CommonFramework/Panels/RunnablePanel.h
    Source/CommonFramework/Panels/SettingsPanel.cpp
    Source/CommonFramework/Panels/SettingsPanel.h
    Source/CommonFramework/PersistentSettings.cpp
    Source/CommonFramework/PersistentSettings.h
    Source/CommonFramework/Tools/BotBaseHandle.cpp
    Source/CommonFramework/Tools/BotBaseHandle.h
    Source/CommonFramework/Tools/ConsoleHandle.h
    Source/CommonFramework/Tools/DiscordWebHook.cpp
    Source/CommonFramework/Tools/DiscordWebHook.h
    Source/CommonFramework/Tools/ErrorDumper.cpp
    Source/CommonFramework/Tools/ErrorDumper.h
    Source/CommonFramework/Tools/FileWindowLogger.cpp
    Source/CommonFramework/Tools/FileWindowLogger.h
    Source/CommonFramework/Tools/InterruptableCommands.cpp
    Source/CommonFramework/Tools/InterruptableCommands.h
    Source/CommonFramework/Tools/Logger.cpp
    Source/CommonFramework/Tools/Logger.h
    Source/CommonFramework/Tools/ProgramEnvironment.cpp
    Source/CommonFramework/Tools/ProgramEnvironment.h
    Source/CommonFramework/Tools/ProgramNotifications.cpp
    Source/CommonFramework/Tools/ProgramNotifications.h
    Source/CommonFramework/Tools/QueuedLogger.cpp
    Source/CommonFramework/Tools/QueuedLogger.h
    Source/CommonFramework/Tools/StatsDatabase.cpp
    Source/CommonFramework/Tools/StatsDatabase.h
    Source/CommonFramework/Tools/StatsTracking.cpp
    Source/CommonFramework/Tools/StatsTracking.h
    Source/CommonFramework/Tools/VideoFeed.h
    Source/CommonFramework/Widgets/CameraSelector.cpp
    Source/CommonFramework/Widgets/CameraSelector.h
    Source/CommonFramework/Widgets/SerialSelector.cpp
    Source/CommonFramework/Widgets/SerialSelector.h
    Source/CommonFramework/Widgets/VideoOverlayWidget.cpp
    Source/CommonFramework/Widgets/VideoOverlayWidget.h
    Source/CommonFramework/Windows/ButtonDiagram.cpp
    Source/CommonFramework/Windows/ButtonDiagram.h
    Source/CommonFramework/Windows/MainWindow.cpp
    Source/CommonFramework/Windows/MainWindow.h
    Source/NintendoSwitch/FixedInterval.h
    Source/NintendoSwitch/Framework/MultiSwitchProgram.cpp
    Source/NintendoSwitch/Framework/MultiSwitchProgram.h
    Source/NintendoSwitch/Framework/MultiSwitchSystem.cpp
    Source/NintendoSwitch/Framework/MultiSwitchSystem.h
    Source/NintendoSwitch/Framework/RunnableSwitchProgram.cpp
    Source/NintendoSwitch/Framework/RunnableSwitchProgram.h
    Source/NintendoSwitch/Framework/SingleSwitchProgram.cpp
    Source/NintendoSwitch/Framework/SingleSwitchProgram.h
    Source/NintendoSwitch/Framework/SwitchCommandRow.cpp
    Source/NintendoSwitch/Framework/SwitchCommandRow.h
    Source/NintendoSwitch/Framework/SwitchProgramTracker.cpp
    Source/NintendoSwitch/Framework/SwitchProgramTracker.h
    Source/NintendoSwitch/Framework/SwitchSetup.h
    Source/NintendoSwitch/Framework/SwitchSystem.cpp
    Source/NintendoSwitch/Framework/SwitchSystem.h
    Source/NintendoSwitch/Framework/VirtualSwitchController.cpp
    Source/NintendoSwitch/Framework/VirtualSwitchController.h
    Source/NintendoSwitch/Framework/VirtualSwitchControllerMapping.cpp
    Source/NintendoSwitch/Framework/VirtualSwitchControllerMapping.h
    Source/NintendoSwitch/FrameworkSettingsPanel.cpp
    Source/NintendoSwitch/FrameworkSettingsPanel.h
    Source/NintendoSwitch/InferenceTraining/PokemonHome_GenerateNameOCR.cpp
    Source/NintendoSwitch/InferenceTraining/PokemonHome_GenerateNameOCR.h
    Source/NintendoSwitch/Options/FriendCodeListOption.cpp
    Source/NintendoSwitch/Options/FriendCodeListOption.h
    Source/NintendoSwitch/Options/GoHomeWhenDoneOption.h
    Source/NintendoSwitch/Options/StartInGripMenuOption.h
    Source/NintendoSwitch/Options/SwitchDateOption.h
    Source/NintendoSwitch/Options/TimeExpressionOption.h
    Source/NintendoSwitch/Panels_NintendoSwitch.cpp
    Source/NintendoSwitch/Panels_NintendoSwitch.h
    Source/NintendoSwitch/Programs/FriendCodeAdder.cpp
    Source/NintendoSwitch/Programs/FriendCodeAdder.h
    Source/NintendoSwitch/Programs/FriendDelete.cpp
    Source/NintendoSwitch/Programs/FriendDelete.h
    Source/NintendoSwitch/Programs/PokemonHome_PageSwap.cpp
    Source/NintendoSwitch/Programs/PokemonHome_PageSwap.h
    Source/NintendoSwitch/Programs/PreventSleep.cpp
    Source/NintendoSwitch/Programs/PreventSleep.h
    Source/NintendoSwitch/Programs/SwitchViewer.cpp
    Source/NintendoSwitch/Programs/SwitchViewer.h
    Source/NintendoSwitch/Programs/TurboButton.cpp
    Source/NintendoSwitch/Programs/TurboButton.h
    Source/NintendoSwitch/Programs/VirtualConsole.cpp
    Source/NintendoSwitch/Programs/VirtualConsole.h
    Source/NintendoSwitch/TestProgram.cpp
    Source/NintendoSwitch/TestProgram.h
    Source/PanelLists.cpp
    Source/PanelLists.h
    Source/Pokemon/Inference/Pokemon_NameReader.cpp
    Source/Pokemon/Inference/Pokemon_NameReader.h
    Source/Pokemon/Inference/Pokemon_PokeballNameReader.cpp
    Source/Pokemon/Inference/Pokemon_PokeballNameReader.h
    Source/Pokemon/Inference/Pokemon_TrainIVCheckerOCR.cpp
    Source/Pokemon/Inference/Pokemon_TrainIVCheckerOCR.h
    Source/Pokemon/Inference/Pokemon_TrainPokemonOCR.cpp
    Source/Pokemon/Inference/Pokemon_TrainPokemonOCR.h
    Source/Pokemon/Options/Pokemon_BallSelectOption.cpp
    Source/Pokemon/Options/Pokemon_BallSelectOption.h
    Source/Pokemon/Options/Pokemon_BallSelectWidget.cpp
    Source/Pokemon/Options/Pokemon_BallSelectWidget.h
    Source/Pokemon/Options/Pokemon_EncounterBotOptions.h
    Source/Pokemon/Options/Pokemon_NameSelectOption.cpp
    Source/Pokemon/Options/Pokemon_NameSelectOption.h
    Source/Pokemon/Options/Pokemon_NameSelectWidget.cpp
    Source/Pokemon/Options/Pokemon_NameSelectWidget.h
    Source/Pokemon/Pokemon_DataTypes.h
    Source/Pokemon/Pokemon_EncounterStats.cpp
    Source/Pokemon/Pokemon_EncounterStats.h
    Source/Pokemon/Pokemon_Notification.cpp
    Source/Pokemon/Pokemon_Notification.h
    Source/Pokemon/Pokemon_Types.h
    Source/Pokemon/Pokemon_Types.cpp
    Source/Pokemon/Resources/Pokemon_PokeballNames.cpp
    Source/Pokemon/Resources/Pokemon_PokeballNames.h
    Source/Pokemon/Resources/Pokemon_PokemonNames.cpp
    Source/Pokemon/Resources/Pokemon_PokemonNames.h
    Source/Pokemon/Resources/Pokemon_PokemonSlugs.cpp
    Source/Pokemon/Resources/Pokemon_PokemonSlugs.h
    Source/PokemonBDSP/Panels_PokemonBDSP.cpp
    Source/PokemonBDSP/Panels_PokemonBDSP.h
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_BattleBallReader.cpp
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_BattleBallReader.h
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_BattleDialogDetector.cpp
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_BattleDialogDetector.h
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_BattleMenuDetector.cpp
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_BattleMenuDetector.h
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_ExperienceGainDetector.cpp
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_ExperienceGainDetector.h
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_StartBattleDetector.cpp
    Source/PokemonSwSh/Inference/Battles/PokemonSwSh_StartBattleDetector.h
    Source/PokemonSwSh/Inference/Dens/PokemonSwSh_BeamSetter.cpp
    Source/PokemonSwSh/Inference/Dens/PokemonSwSh_BeamSetter.h
    Source/PokemonSwSh/Inference/Dens/PokemonSwSh_DenMonReader.cpp
    Source/PokemonSwSh/Inference/Dens/PokemonSwSh_DenMonReader.h
    Source/PokemonSwSh/Inference/Dens/PokemonSwSh_RaidCatchDetector.cpp
    Source/PokemonSwSh/Inference/Dens/PokemonSwSh_RaidCatchDetector.h
    Source/PokemonSwSh/Inference/Dens/PokemonSwSh_RaidLobbyReader.cpp
    Source/PokemonSwSh/Inference/Dens/PokemonSwSh_RaidLobbyReader.h
    Source/PokemonSwSh/Inference/PokemonSwSh_FishingDetector.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_FishingDetector.h
    Source/PokemonSwSh/Inference/PokemonSwSh_IVCheckerReader.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_IVCheckerReader.h
    Source/PokemonSwSh/Inference/PokemonSwSh_MarkFinder.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_MarkFinder.h
    Source/PokemonSwSh/Inference/PokemonSwSh_PokemonSpriteReader.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_PokemonSpriteReader.h
    Source/PokemonSwSh/Inference/PokemonSwSh_PromptDetector.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_PromptDetector.h
    Source/PokemonSwSh/Inference/PokemonSwSh_ReceivePokemonDetector.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_ReceivePokemonDetector.h
    Source/PokemonSwSh/Inference/PokemonSwSh_SelectionArrowFinder.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_SelectionArrowFinder.h
    Source/PokemonSwSh/Inference/PokemonSwSh_SummaryShinySymbolDetector.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_SummaryShinySymbolDetector.h
    Source/PokemonSwSh/Inference/PokemonSwSh_TypeSymbolFinder.cpp
    Source/PokemonSwSh/Inference/PokemonSwSh_TypeSymbolFinder.h
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinyDialogTracker.cpp
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinyDialogTracker.h
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinyEncounterDetector.cpp
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinyEncounterDetector.h
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinyFilters.h
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinySparkleDetector.cpp
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinySparkleDetector.h
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinyTrigger.cpp
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_ShinyTrigger.h
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_SparkleTrigger.cpp
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_SparkleTrigger.h
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_SquareDetector.cpp
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_SquareDetector.h
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_SquareTrigger.cpp
    Source/PokemonSwSh/Inference/ShinyDetection/PokemonSwSh_SquareTrigger.h
    Source/PokemonSwSh/InferenceTraining/PokemonSwSh_GenerateIVCheckerOCR.cpp
    Source/PokemonSwSh/InferenceTraining/PokemonSwSh_GenerateIVCheckerOCR.h
    Source/PokemonSwSh/InferenceTraining/PokemonSwSh_GenerateNameOCRPokedex.cpp
    Source/PokemonSwSh/InferenceTraining/PokemonSwSh_GenerateNameOCRPokedex.h
    Source/PokemonSwSh/MaxLair/AI/PokemonSwSh_MaxLair_AI.cpp
    Source/PokemonSwSh/MaxLair/AI/PokemonSwSh_MaxLair_AI.h
    Source/PokemonSwSh/MaxLair/AI/PokemonSwSh_MaxLair_AI_SelectItem.cpp
    Source/PokemonSwSh/MaxLair/AI/PokemonSwSh_MaxLair_AI_SelectMove.cpp
    Source/PokemonSwSh/MaxLair/AI/PokemonSwSh_MaxLair_AI_SelectPath.cpp
    Source/PokemonSwSh/MaxLair/AI/PokemonSwSh_MaxLair_AI_SelectStarter.cpp
    Source/PokemonSwSh/MaxLair/AI/PokemonSwSh_MaxLair_AI_SwapCatch.cpp
    Source/PokemonSwSh/MaxLair/AI/PokemonSwSh_MaxLair_AI_SwapProfessor.cpp
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_Notifications.cpp
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_Notifications.h
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_Options.cpp
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_Options.h
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_State.cpp
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_State.h
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_StateMachine.cpp
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_StateMachine.h
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_StateTracker.cpp
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_StateTracker.h
    Source/PokemonSwSh/MaxLair/Framework/PokemonSwSh_MaxLair_Stats.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_BattleMenu.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_BattleMenu.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_EndBattle.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_EndBattle.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_Entrance.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_Entrance.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_HPPP.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_HPPP.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_ItemSelectMenu.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_ItemSelectMenu.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_Lobby.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_Lobby.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_PathSelect.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_PathSelect.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_PokemonReader.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_PokemonReader.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_PokemonSelectMenu.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_PokemonSelectMenu.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_PokemonSwapMenu.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_PokemonSwapMenu.h
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_ProfessorSwap.cpp
    Source/PokemonSwSh/MaxLair/Inference/PokemonSwSh_MaxLair_Detect_ProfessorSwap.h
    Source/PokemonSwSh/MaxLair/PokemonSwSh_MaxLair_SingleRun.cpp
    Source/PokemonSwSh/MaxLair/PokemonSwSh_MaxLair_SingleRun.h
    Source/PokemonSwSh/MaxLair/PokemonSwSh_MaxLair_Standard.cpp
    Source/PokemonSwSh/MaxLair/PokemonSwSh_MaxLair_Standard.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_Battle.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_Battle.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_CaughtScreen.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_CaughtScreen.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_Entrance.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_Entrance.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_ItemSelect.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_ItemSelect.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_PathSelect.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_PathSelect.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_PokemonSelect.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_PokemonSelect.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_PokemonSwap.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_PokemonSwap.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_ProfessorSwap.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_ProfessorSwap.h
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_Start.cpp
    Source/PokemonSwSh/MaxLair/Program/PokemonSwSh_MaxLair_Run_Start.h
    Source/PokemonSwSh/Options/PokemonSwSh_AutoHostNotification.cpp
    Source/PokemonSwSh/Options/PokemonSwSh_AutoHostNotification.h
    Source/PokemonSwSh/Options/PokemonSwSh_Catchability.cpp
    Source/PokemonSwSh/Options/PokemonSwSh_Catchability.h
    Source/PokemonSwSh/Options/PokemonSwSh_DateToucher.h
    Source/PokemonSwSh/Options/PokemonSwSh_EggStepCount.cpp
    Source/PokemonSwSh/Options/PokemonSwSh_EggStepCount.h
    Source/PokemonSwSh/Options/PokemonSwSh_EncounterBotCommon.h
    Source/PokemonSwSh/Options/PokemonSwSh_EncounterFilter.cpp
    Source/PokemonSwSh/Options/PokemonSwSh_EncounterFilter.h
    Source/PokemonSwSh/Options/PokemonSwSh_FossilTable.h
    Source/PokemonSwSh/Options/PokemonSwSh_MultiHostTable.h
    Source/PokemonSwSh/Options/PokemonSwSh_RegiSelector.cpp
    Source/PokemonSwSh/Options/PokemonSwSh_RegiSelector.h
    Source/PokemonSwSh/Panels_PokemonSwSh.cpp
    Source/PokemonSwSh/Panels_PokemonSwSh.h
    Source/PokemonSwSh/PokemonSwSh_SettingsPanel.cpp
    Source/PokemonSwSh/PokemonSwSh_SettingsPanel.h
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-BerryFarmer.cpp
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-BerryFarmer.h
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-DailyHighlightFarmer.cpp
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-DailyHighlightFarmer.h
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-LotoFarmer.cpp
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-LotoFarmer.h
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-StowOnSideFarmer.cpp
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-StowOnSideFarmer.h
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-WattFarmer.cpp
    Source/PokemonSwSh/Programs/DateSpamFarmers/PokemonSwSh_DateSpam-WattFarmer.h
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_BeamReset.cpp
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_BeamReset.h
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperEU.cpp
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperEU.h
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperJPN-7.8k.cpp
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperJPN-7.8k.h
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperJPN.cpp
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperJPN.h
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperStats.h
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperUS.cpp
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_DaySkipperUS.h
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_EventBeamFinder.cpp
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_EventBeamFinder.h
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_PurpleBeamFinder.cpp
    Source/PokemonSwSh/Programs/DenHunting/PokemonSwSh_PurpleBeamFinder.h
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggCombined2.cpp
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggCombined2.h
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggCombinedShared.h
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggFetcher2.cpp
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggFetcher2.h
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggHatcher.cpp
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggHatcher.h
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggHelpers.h
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggSuperCombined2.cpp
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_EggSuperCombined2.h
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_GodEggDuplication.cpp
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_GodEggDuplication.h
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_GodEggItemDupe.cpp
    Source/PokemonSwSh/Programs/EggPrograms/PokemonSwSh_GodEggItemDupe.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_AutonomousBallThrower.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_AutonomousBallThrower.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_BallThrower.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_BallThrower.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_ClothingBuyer.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_ClothingBuyer.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_DexRecFinder.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_DexRecFinder.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_MassRelease.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_MassRelease.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_StatsReset-Calyrex.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_StatsReset-Calyrex.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_StatsReset-Moltres.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_StatsReset-Moltres.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_StatsReset-Regi.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_StatsReset-Regi.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_StatsReset.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_StatsReset.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_SurpriseTrade.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_SurpriseTrade.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_TradeBot.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_TradeBot.h
    Source/PokemonSwSh/Programs/General/PokemonSwSh_TurboA.cpp
    Source/PokemonSwSh/Programs/General/PokemonSwSh_TurboA.h
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_AutoHost-MultiGame.cpp
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_AutoHost-MultiGame.h
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_AutoHost-Rolling.cpp
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_AutoHost-Rolling.h
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_AutoHostStats.cpp
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_AutoHostStats.h
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_DenRoller.cpp
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_DenRoller.h
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_DenTools.cpp
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_DenTools.h
    Source/PokemonSwSh/Programs/Hosting/PokemonSwSh_LobbyWait.h
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_OverworldMovement.cpp
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_OverworldMovement.h
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_OverworldTargetTracker.cpp
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_OverworldTargetTracker.h
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_OverworldTrajectory.cpp
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_OverworldTrajectory.h
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_OverworldTrigger.cpp
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_OverworldTrigger.h
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_ShinyHuntAutonomous-Overworld.cpp
    Source/PokemonSwSh/Programs/OverworldBot/PokemonSwSh_ShinyHuntAutonomous-Overworld.h
    Source/PokemonSwSh/Programs/PokemonSwSh_BasicCatcher.cpp
    Source/PokemonSwSh/Programs/PokemonSwSh_BasicCatcher.h
    Source/PokemonSwSh/Programs/PokemonSwSh_EncounterDetection.cpp
    Source/PokemonSwSh/Programs/PokemonSwSh_EncounterDetection.h
    Source/PokemonSwSh/Programs/PokemonSwSh_EncounterHandler.cpp
    Source/PokemonSwSh/Programs/PokemonSwSh_EncounterHandler.h
    Source/PokemonSwSh/Programs/PokemonSwSh_RaidItemFarmerOKHO.cpp
    Source/PokemonSwSh/Programs/PokemonSwSh_RaidItemFarmerOKHO.h
    Source/PokemonSwSh/Programs/PokemonSwSh_StartGame.cpp
    Source/PokemonSwSh/Programs/PokemonSwSh_StartGame.h
    Source/PokemonSwSh/Programs/PokemonSwSh_SynchronizedSpinning.cpp
    Source/PokemonSwSh/Programs/PokemonSwSh_SynchronizedSpinning.h
    Source/PokemonSwSh/Programs/QoLMacros/PokemonSwSh_FastCodeEntry.cpp
    Source/PokemonSwSh/Programs/QoLMacros/PokemonSwSh_FastCodeEntry.h
    Source/PokemonSwSh/Programs/QoLMacros/PokemonSwSh_FriendSearchDisconnect.cpp
    Source/PokemonSwSh/Programs/QoLMacros/PokemonSwSh_FriendSearchDisconnect.h
    Source/PokemonSwSh/Programs/ReleaseHelpers.h
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-BerryTree.cpp
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-BerryTree.h
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-Fishing.cpp
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-Fishing.h
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-IoATrade.cpp
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-IoATrade.h
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-Regi.cpp
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-Regi.h
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-Regigigas2.cpp
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-Regigigas2.h
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-StrongSpawn.cpp
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-StrongSpawn.h
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-SwordsOfJustice.cpp
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-SwordsOfJustice.h
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-Whistling.cpp
    Source/PokemonSwSh/Programs/ShinyHuntAutonomous/PokemonSwSh_ShinyHuntAutonomous-Whistling.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_CurryHunter.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_CurryHunter.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_MultiGameFossil.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_MultiGameFossil.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHunt-Regi.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHunt-Regi.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntTools.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntTools.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-IoATrade.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-IoATrade.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-Regi.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-Regi.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-Regigigas2.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-Regigigas2.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-StrongSpawn.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-StrongSpawn.h
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-SwordsOfJustice.cpp
    Source/PokemonSwSh/Programs/ShinyHuntUnattended/PokemonSwSh_ShinyHuntUnattended-SwordsOfJustice.h
    Source/PokemonSwSh/Resources/PokemonSwSh_MaxLairDatabase.cpp
    Source/PokemonSwSh/Resources/PokemonSwSh_MaxLairDatabase.h
    Source/PokemonSwSh/Resources/PokemonSwSh_PokeballSprites.cpp
    Source/PokemonSwSh/Resources/PokemonSwSh_PokeballSprites.h
    Source/PokemonSwSh/Resources/PokemonSwSh_PokemonSprites.cpp
    Source/PokemonSwSh/Resources/PokemonSwSh_PokemonSprites.h
    Source/PokemonSwSh/Resources/PokemonSwSh_TypeMatchup.cpp
    Source/PokemonSwSh/Resources/PokemonSwSh_TypeMatchup.h
    Source/PokemonSwSh/Resources/PokemonSwSh_TypeSprites.cpp
    Source/PokemonSwSh/Resources/PokemonSwSh_TypeSprites.h
    Source/PokemonSwSh/ShinyHuntTracker.cpp
    Source/PokemonSwSh/ShinyHuntTracker.h
)
add_executable(SerialPrograms WIN32 ${MAIN_SOURCES})
set_target_properties(SerialPrograms PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(SerialPrograms Qt5::Widgets Qt5::SerialPort Qt5::Multimedia Qt5::MultimediaWidgets tesseractPA.lib)

#add defines
target_compile_definitions(SerialPrograms PRIVATE PA_TESSERACT)

#add include directory
target_include_directories(SerialPrograms PRIVATE Source/ ../)

#enable MP with MSVC (Build with Multiple Processes)
if (MSVC)
    target_compile_options(SerialPrograms PRIVATE "/MP")
endif()

#copy needed dlls
#file(COPY *.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(GLOB MY_DLLS
  "*.dll"
)
file(COPY ${MY_DLLS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
